Added cardinality. Made sure it compiles and runs under JDK9.