@@ -92,7 +92,7 @@
                <configurationSourceDirectory>../data</configurationSourceDirectory>
                <copyConfigurationDirectory>true</copyConfigurationDirectory>
                <includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
-               <extraJvmArguments>-Xms128m</extraJvmArguments>
+               <extraJvmArguments>-Xms128m --add-modules java.xml.bind</extraJvmArguments>
                <platforms>
                   <platform>windows</platform>
                   <platform>unix</platform>
